--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/products/mcr-009/latest-release.webp" alt="Latest Release">
+      <img src="assets/images/products/mcr-011/latest-release.webp" alt="Latest Release">
       </div>
 
       <div class="falling-shapes">
-        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:1;">
-        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:2;">
-        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:3;">
-        <img src="assets/images/home/effects/sticker.webp" class="shape" style="--i:4;">
+        <img src="assets/images/products/mcr-011/effect.webp" class="shape" style="--i:1;">
+        <img src="assets/images/products/mcr-011/effect.webp" class="shape" style="--i:2;">
+        <img src="assets/images/products/mcr-011/effect.webp" class="shape" style="--i:3;">
+        <img src="assets/images/products/mcr-011/effect.webp" class="shape" style="--i:4;">
       </div>
 
 
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">Demo.nstration #1</h3>
+        <h3 class="release-title">Demo.nstration #2</h3>
         <div class="rainbow-underline"></div>
         <p>
-          In collaboration with Zaragoza Record House—introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
-          <br> <br>
+          In collaboration with Zaragoza Record House—this is the 2nd EP and cassette of the Hobbyist, Demo.nstration Series.
+          <br><br>
           Limited to only 5, get your hands on this ultra rare gem while you can!
         </p>
-        <button class="pre-order-button" onclick="location.href='store/mcr-009/'">
+        <button class="pre-order-button" onclick="location.href='store/mcr-011/'">
           PRE-ORDER
         </button>        
       </div>
@@ -88,6 +88,24 @@
     <!-- Store Section -->
     <div class="store-section">
       <div class="store-grid">
+
+        <a href="store/mcr-011/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Hobbyist,</p>
+                <p class="merch-block-product-name">Demo.nstration #2 - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
 
         <a href="store/mcr-009/" class="merch-link">
           <div class="merch-block">
