--- a/store/mcr-011/index.html
+++ b/store/mcr-011/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Demo.nstration #1 - Hobbyist,</title>
+    <title>Cassette - Demo.nstration #2 - Hobbyist,</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -49,11 +49,11 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-009/mcr-009-full.webp" alt="Product Image">
+          <img src="../../assets/images/products/mcr-011/mcr-011-full.webp" alt="Product Image">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Demo.nstration #1 - Pre-Order</h1>
+          <h1 class="product-title">Demo.nstration #2 - Pre-Order</h1>
           <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Hobbyist,</h2>
           <div class="vertical-whitespace"></div>
@@ -63,7 +63,7 @@
             <span class="product-price">$10</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1765554255802'></div>
+              <div id='product-component-1766208295638'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -91,8 +91,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '8025872039990',
-                      node: document.getElementById('product-component-1765554255802'),
+                      id: '8097060978742',
+                      node: document.getElementById('product-component-1766208295638'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -399,12 +399,12 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Mckngbrd Breeez</li>
-              <li>The Candidate</li>
-              <li>Silk Streak</li>
-              <li>RedHat</li>
-              <li>New Things</li>
-              <li>Slketch</li>
+              <li>Get Right</li>
+              <li>Perspective</li>
+              <li>Pots & Logs</li>
+              <li>Firefly</li>
+              <li>Valleywill</li>
+              <li>Unwilted Stutter</li>
           </div>
           <hr class="separator">
           <div class="pressing-info">
@@ -412,7 +412,7 @@
             <div class="vertical-whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
             <p>White Cassette x5</p>
-            <p>MCR-009</p>
+            <p>MCR-011</p>
           </div>
         </div>
       </div>
@@ -422,7 +422,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        In collaboration with Zaragoza Record House—introducing the 1st EP and cassette of the Hobbyist, Demo.nstration Series.
+        In collaboration with Zaragoza Record House—this is the 2nd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
         Limited to only 5, get your hands on this ultra rare gem while you can!
       </p>
@@ -441,16 +441,16 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../mcr-011/" class="merch-link">
+            <a href="../mcr-009/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">Hobbyist,</p>
-                    <p class="merch-block-product-name">Demo.nstration #2 - Cassette</p>
+                    <p class="merch-block-product-name">Demo.nstration #1 - Cassette</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
