--- a/store/index.html
+++ b/store/index.html
@@ -48,6 +48,24 @@
       <div class="store-container">
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
+
+          <a href="mcr-011/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Hobbyist,</p>
+                  <p class="merch-block-product-name">Demo.nstration #2 - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
           
           <a href="mcr-009/" class="merch-link">
             <div class="merch-block">
