--- a/store/mcr-012/index.html
+++ b/store/mcr-012/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Demo.nstration #2 - Hobbyist,</title>
+    <title>Cassette - Demo.nstration #3 - Hobbyist,</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -49,11 +49,11 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-011/mcr-011-full.webp" alt="Product Image">
+          <img src="../../assets/images/products/mcr-012/mcr-012-full.webp" alt="Product Image">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Demo.nstration #2</h1>
+          <h1 class="product-title">Demo.nstration #3</h1>
           <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Hobbyist,</h2>
           <div class="vertical-whitespace"></div>
@@ -63,7 +63,7 @@
             <span class="product-price">$10</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1766208295638'></div>
+              <div id='product-component-1766794812369'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -91,8 +91,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '8097060978742',
-                      node: document.getElementById('product-component-1766208295638'),
+                      id: '8097061142582',
+                      node: document.getElementById('product-component-1766794812369'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -399,12 +399,12 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Get Right</li>
-              <li>Perspective</li>
-              <li>Pots & Logs</li>
-              <li>Firefly</li>
-              <li>Valleywill</li>
-              <li>Unwilted Stutter</li>
+              <li>Superbowl (Reload Page)</li>
+              <li>Not The Passed</li>
+              <li>Yeesh</li>
+              <li>Cosmology</li>
+              <li>Giv</li>
+              <li>Dear J. Murphy, (2 Natures)</li>
           </div>
           <hr class="separator">
           <div class="pressing-info">
@@ -412,7 +412,7 @@
             <div class="vertical-whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
             <p>White Cassette x5</p>
-            <p>MCR-011</p>
+            <p>MCR-012</p>
           </div>
         </div>
       </div>
@@ -422,9 +422,9 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        In collaboration with Zaragoza Record House—this is the 2nd EP and cassette of the Hobbyist, Demo.nstration Series.
+        In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
-        Limited to only 5, get your hands on this ultra rare gem while you can!
+        Limited to only 5, get your hands on one before they’re gone!
       </p>
     </section>
 
