--- a/store/mcr-009/index.html
+++ b/store/mcr-009/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Demo.nstration #1 - Pre-Order</h1>
+          <h1 class="product-title">Demo.nstration #1</h1>
           <div class="vertical-whitespace"></div>
           <h2 class="product-artist">Hobbyist,</h2>
           <div class="vertical-whitespace"></div>
