--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           Limited to only 5, get your hands on one before they’re gone!
         </p>
         <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
-          PRE-ORDER
+          BUY NOW
         </button>        
       </div>
     </div>
