--- a/store/cryhrd-001/index.html
+++ b/store/cryhrd-001/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horse Smoking T-Shirt - Mystery Class Records</title>
+    <title>OCIW White T-Shirt - Mystery Class Records</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -49,21 +49,21 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image">
+          <img src="../../assets/images/products/cryhrd-001/cryhrd-001-full.webp" alt="Product Image">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Horse Smoking T-Shirt</h1>
+          <h1 class="product-title">OCIW White T-Shirt</h1>
           <div class="vertical-whitespace"></div>
-          <h2 class="product-artist">Panhandle</h2>
+          <h2 class="product-artist">Cryhard</h2>
           <div class="vertical-whitespace"></div>
           <hr class="separator">
           <div class="price-and-button">
-            <span class="product-price">$25</span>
+            <span class="product-price">$20</span>
             
             <div class="product-buy-button">
 
-              <div id='product-component-1764804198366'></div>
+              <div id='product-component-1767327445576'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -91,8 +91,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '8023214030902',
-                      node: document.getElementById('product-component-1764804198366'),
+                      id: '7946555654198',
+                      node: document.getElementById('product-component-1767327445576'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -403,9 +403,9 @@
               <div class="vertical-whitespace"></div>
               Comfort Colors® Tee
               <div class="vertical-whitespace"></div>
-              Short-Sleeve, Off-White
+              Short-Sleeve, White
               <div class="vertical-whitespace"></div>
-              Horse Smoking Graphic on Front
+              <i>Of Course I Will</i> Graphic on Back
             </ol>
           </div>
           <hr class="separator">
@@ -424,10 +424,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Possibly the first-ever shirt featuring a smoking horse, this is our OG merch piece for panhandle.
-        <br><br>Printed on a Comfort Colors 100% cotton, off-white, short-sleeve tee.
-        <br><br>Only 30 made—grab one while you can.
-
+        This is the second edition <i>Of Course I Will</i> shirt from Cryhard.
+        <br><br>
+        This is the final piece of merch related to this album. We’re putting these on sale to clean house and make room for the next era of Cryhard merch.
+        <br><br>
+        Grab one of these white Comfort Colors album-related tees while supplies last!
       </p>
     </section>
 
@@ -443,24 +444,6 @@
         <div class="store-section">
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
-
-            <a href="../mcr-008/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">panhandle.</p>
-                    <p class="merch-block-product-name">midwest heartbreak - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
 
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
@@ -480,24 +463,6 @@
               </div>
             </a>
 
-            <a href="../mcr-007/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">powdr</p>
-                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
             <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
@@ -508,6 +473,42 @@
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-003/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-001/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                    <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
