--- a/store/index.html
+++ b/store/index.html
@@ -49,6 +49,24 @@
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
 
+          <a href="cryhrd-001/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Cryhard</p>
+                  <p class="merch-block-product-name">OCIW White T-Shirt</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$20</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="mcr-012/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
