added roster photos

--- a/roster/index.html
+++ b/roster/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!-- Under Construction Redirect -->
-<script>
-    window.location.href = "/assets/scripts/under-construction.html";
-</script>
 
 <html lang="en">
   <head>
@@ -57,7 +53,7 @@
           <a href="acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="Acid Baptism Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -70,7 +66,7 @@
           <a href="cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="Cryhard Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -83,7 +79,7 @@
           <a href="donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="Donovan Funk Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -93,10 +89,36 @@
             </div>
           </a>
 
+          <a href="feverest/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets\images\roster\feverest\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Feverest</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="foam/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets\images\roster\foam\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Foam</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="Idiot Mile Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -106,27 +128,53 @@
             </div>
           </a>
 
-          <a href="sweetest-pot/" class="artist-link">
+          <a href="pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="Sweetest Pot Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\pageant-dad\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
-                  <p class="artist-block-artist-name">Sweetest Pot</p>
+                  <p class="artist-block-artist-name">Pageant Dad</p>
                 </div>
               </div>
             </div>
           </a>
 
-          <a href="toad-socks/" class="artist-link">
+          <a href="panhandle/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\toad-socks\roster-pic.webp" alt="Toad Socks Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\panhandle\roster-pic.webp" alt="Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
-                  <p class="artist-block-artist-name">Toad Socks</p>
+                  <p class="artist-block-artist-name">Panhandle</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="powdr/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets\images\roster\powdr\band-pic1.webp" alt="Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Powdr</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="sweetest-pot/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Sweetest Pot</p>
                 </div>
               </div>
             </div>
